# NCDC2014-1

./: .gitignore  10-fastcgi.conf  CMakeLists.txt  README  README.md  backtrace.c  backtrace.h  deploy  deploynew  dispatcher.c  dispatcher.h  log.h  logger.c  logger.h  raphters.c  request.c  request.h  response.c  response.h  run-local
webapp/: robots.txt  utils.c  utils.c~  utils.h  webapp.c  webapp.c~  webapp.h  webapp.h~
webapp/static/: index.html  privacy.html  services.html  terms.html
webapp/templates/: admin.html.template  entry.html.template  footer.html.template  header.html.template  login.html.template  login.html.template~  new.html.template  new_user.html.template  timesheet.js.template
